--- a/website/TheWishgranter.html
+++ b/website/TheWishgranter.html
@@ -17,7 +17,7 @@
 </form><br>
 
 <h2>The Wishgranter</h2>
-<video id="thewishgranter" class="video-js vjs-default-skin" width=50% height=50% controls preload="none" poster='http://34.67.227.77/media/pics/thewishgranter.jpg’ data-setup='{ "aspectRatio":"640:267", "playbackRates": [1, 1.5, 2] }'>
+<video id="thewishgranter" class="video-js vjs-default-skin" width=50% height=50% controls autoplay preload="none" poster='http://34.67.227.77/media/pics/thewishgranter.jpg’ data-setup='{ "aspectRatio":"640:267", "playbackRates": [1, 1.5, 2] }'>
 <source src="http://34.67.227.77/media/videos/thewishgranter.mp4" type='video/mp4' />
 </video><br>
 <h4>CGI 3D Animation Short Film HD "The Wishgranter" by Wishgranter Team | CGMeetup</h4><br>
