--- a/website/Christmastime.html
+++ b/website/Christmastime.html
@@ -17,7 +17,7 @@
 </form><br>
 
 <h2>Christmas time</h2>
-<video id="christmastime1" class="video-js vjs-default-skin" width=50% height=50% controls preload="none" poster='http://34.67.227.77/media/pics/xmas1’ data-setup='{ "aspectRatio":"640:267", "playbackRates": [1, 1.5, 2] }'>
+<video id="christmastime1" class="video-js vjs-default-skin" width=auto height=auto controls autoplay preload="none" poster='http://34.67.227.77/media/pics/xmas1’ data-setup='{ "playbackRates": [1, 1.5, 2] }'>
 <source src="http://34.67.227.77/media/videos/christmastime1.mp4" type='video/mp4' />
 </video><br>
 <h4>A dreamy image collection of Christmas</h4><br>
