--- a/website/SwanLake.html
+++ b/website/SwanLake.html
@@ -17,7 +17,7 @@
 </form><br>
 
 <h2>Swan lake - Baxter park</h2>
-<video id="swanlake" class="video-js vjs-default-skin" width=auto height=auto controls autoplay preload="none" poster='http://34.67.227.77/media/pics/swanlake.PNG’ data-setup='{ "playbackRates": [1, 1.5, 2] }'>
+<video id="swanlake" class="video-js vjs-default-skin" width=50% height=50% controls autoplay preload="none" poster='http://34.67.227.77/media/pics/swanlake.PNG’ data-setup='{ "playbackRates": [1, 1.5, 2] }'>
 <source src="http://34.67.227.77/media/videos/swanlake.mp4" type='video/mp4' />
 </video><br>
 <h4>Swan lake - Baxter park - Dundee, Scotland, United Kingdom</h4><br>
