--- a/website/UploadVideo.html
+++ b/website/UploadVideo.html
@@ -1,13 +1,14 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="myflixstyle.css">
 <title>MyFlix by Shashini</title>
 </head>
 <body>
 <h1>MyFlix by Shashini - Upload Page</h1>
-<img src="http://34.67.227.77/media/pics/logo_myflix.PNG" alt="MyFlix by Shashini.. The ultimate streaming experience"><br>
+<img src="http://34.67.227.77/media/pics/logo_myflix.PNG" alt="MyFlix by Shashini.. The ultimate streaming experience" align = right><br>
 <h4>The ultimate streaming experience</h4><br>
 
 <!-- The form -->
