--- a/website/index.html
+++ b/website/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>MyFlix by Shashini - Home</h1>
-<img src="http://34.67.227.77/media/pics/logo_myflix.PNG" alt="MyFlix by Shashini.. The ultimate streaming experience"><br>
+<img src="http://34.67.227.77/media/pics/logo_myflix.PNG" alt="MyFlix by Shashini.. The ultimate streaming experience" align = right><br>
 <h4>The ultimate streaming experience</h4><br>
 
 <!-- The form -->
