--- a/website/Hydrangea.html
+++ b/website/Hydrangea.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>MyFlix by Shashini - Streaming video</h1>
-<img src="http://34.67.227.77/media/pics/logo_myflix.PNG" alt="MyFlix by Shashini.. The ultimate streaming experience"><br>
+<img src="http://34.67.227.77/media/pics/logo_myflix.PNG" alt="MyFlix by Shashini.. The ultimate streaming experience" width="20" height="20" style="float:left"><br>
 <h4>The ultimate streaming experience</h4><br>
 
 <!-- The form -->
@@ -17,7 +17,7 @@
 </form><br>
 
 <h2>Hydrangea in Dundee Scotland, UK</h2>
-<video id="hydrangea" class="video-js vjs-default-skin" width=auto height=auto controls autoplay preload="none" poster='http://34.67.227.77/media/pics/hydrangea.png’ data-setup='{ "playbackRates": [1, 1.5, 2] }'>
+<video id="hydrangea" class="video-js vjs-default-skin" width=50% height=50% controls autoplay preload="none" poster='http://34.67.227.77/media/pics/hydrangea.png’ data-setup='{ "playbackRates": [1, 1.5, 2] }'>
 <source src="http://34.67.227.77/media/videos/hydrangea.mp4" type='video/mp4' />
 </video><br>
 <h4>Hydrangea - Dundee, Scotland, United Kingdom</h4><br>
